# nixos

./: .actrc  .envrc  .gitignore  .gitlab-ci.yml  .lsp.json  .markdownlint.json  .pre-commit-config.yaml  .prek.toml  .secretsignore  .sops.yaml  ARCHITECTURE.md  CLAUDE.md  NEXT_STEPS.md  PERFORMANCE_OPTIMIZATION_FOLLOWUP.md  QUALITY_ASSESSMENT_REPORT_2025-12-26.md  QUALITY_ASSESSMENT_REPORT_2026-01-01.md  QUALITY_FOLLOWUP_PROMPT.md  README.md  config-installer.nix  config.nix  configuration.nix  flake.nix  flake.nix.backup  garnix.yaml  justfile  namaka.toml  opencode.json  pre-commit-hooks.nix  renovate.json  result  scripts.nix  setup-zfs.sh  treefmt.toml  tui.json
.github/workflows/: auto-merge.yml  check.yml  ci.yml  github-pages.yml  quality-gates.yml  update-tree.yml  weekly-updates.yml
.quality-metrics/: aggregate-coverage.json  coverage-report.md  coverage.json  eval-time.json
apps/: install-remote.nix  nixos-anywhere.nix
archive/home-work-20250831/: fish.nix
archive/system-work-20250830/: awscli.nix  vpn.nix
archive/work-modules-20250825/: README.md
backup/: flake.nix
backup/system/: default.nix
docs/: BADGES_SETUP.md  NEXT_SESSION_GUIDE.md  QUALITY_DASHBOARD.md  QUALITY_MONITORING_SETUP.md
docs/archive/: IMPLEMENTATION_VERIFICATION.md  QUALITY_CHECK_SESSION_PROMPT.md
flake-parts/: apps.nix  dev.nix  packages.nix
home/: default.nix  persistence-tui.nix  persistence.nix
hosts/: boot-zfs.nix  default.nix  desktop.nix  disko-zfs-template.nix  helpers.nix  hp-probook-vmware.nix  hp-probook-wsl.nix  lib.nix  m920q.nix  portable.nix  shared-gui.nix  shared-tui.nix  shared.nix  surface.nix
lib/: default.nix  defaults.nix  fonts.nix  host-data.nix  hosts.nix  import.nix  mkHost.nix  profiles.nix  treesitter-grammars.nix
modules/: vitals.nix
scripts/: build-iso-for-windows.sh
secrets/: secrets.json  secrets.yaml
system/: default.nix  network.nix
tools/: CLAUDE.md
tools/scripts/: Cargo.toml  README.md  WSL-Backup-Orchestrator.ps1  calculate-coverage.sh  check-closure-size.sh  check-dangerous-patterns.sh  check-flake-inputs.sh  check-installer-keys.sh  detect-unused-modules.sh  generate-quality-dashboard.sh  install-nixos  namaka-coverage-report.sh  profile-boot.sh  profile-evaluation.sh  shell-health-check.fish  validate-commit-msg.sh  validate-github-token.sh  wsl-backup-hpprobook.sh  wsl-smoke-test.sh
tools/templates/rust/: Cargo.toml  flake.nix
tools/templates/rust/src/: main.rs
tools/zfs-nixos-setup/: .gitignore  Cargo.toml  flake.nix
tools/zfs-nixos-setup/src/: main.rs
(+533 files in other folders)
